# kuni

./: CMakeLists.txt  README.md  aui.boot.cmake
src/: AppBase.cpp  OpenAITools.cpp  OpenAITools.h  config.h  main.cpp
src/util/: populate_from_diary_ai_if_needed.cpp  secrets.cpp
